--- a/app/templates/upload/new.html
+++ b/app/templates/upload/new.html
@@ -12,7 +12,10 @@
     <input type="url" name="url" />
     <b> or </b><br />
     <label>Upload a video (.mp4, .mov, .avi, .flv, .mpeg)</label>
-    <input type="file" name="upload" /><br />
+    <input type="file" name="upload" /><br /><br />
+
+    <label>Banned words</label><br>
+    <textarea name="words"></textarea>
     <input type="submit" />
   </form>
 </body>
